--- a/.github/workflows/user-issue.yml
+++ b/.github/workflows/user-issue.yml
@@ -24,7 +24,9 @@ jobs:
       uses: fjogeleit/http-request-action@v1
       with:
         url: ${{ secrets.USER_ISSUE_POST_URL }}
+        contentType: "application/json"
         method: 'POST'
+        escapeData: 'true'
         data: '{"issue":"${{github.event.issue.body}}"}'
     - name: Show Response
       run: echo ${{ steps.issuePost.outputs.response }}
