--- a/.github/workflows/user-issue.yml
+++ b/.github/workflows/user-issue.yml
@@ -27,6 +27,6 @@ jobs:
         contentType: "application/json"
         method: 'POST'
         escapeData: 'true'
-        data: '{"issue":"${{github.event.issue.body}}"}'
+        data: '{"id":"${{github.event.issue.id}}","title":"${{github.event.issue.title}}","body":"${{github.event.issue.body}}"}'
     - name: Show Response
       run: echo ${{ steps.issuePost.outputs.response }}
