--- a/.github/workflows/user-issue.yml
+++ b/.github/workflows/user-issue.yml
@@ -23,6 +23,6 @@ jobs:
         contentType: "application/json"
         method: 'POST'
         escapeData: 'true'
-        data: '{"id":"${{github.event.issue.id}}","title":"${{github.event.issue.title}}","body":"${{github.event.issue.body}}"}'
+        data: '{"id":"${{github.event.issue.id}}","title":"${{github.event.issue.title}}","body":"${{github.event.issue.body}}","user":"${{github.event.issue.user.login}}"}'
     - name: Show Response
       run: echo ${{ steps.issuePost.outputs.response }}
