--- a/.github/workflows/user-issue.yml
+++ b/.github/workflows/user-issue.yml
@@ -24,5 +24,17 @@ jobs:
         method: 'POST'
         escapeData: 'true'
         data: '{"id":"${{github.event.issue.id}}","title":"${{github.event.issue.title}}","body":"${{github.event.issue.body}}","user":"${{github.event.issue.user.login}}"}'
+    - name: Reply to Issue
+      if: ${{ steps.issuePost.outputs.response.code != 'OK' }}
+      uses: peter-evans/create-or-update-comment@v2
+      with:
+        issue-number: ${{ github.event.issue.number }}
+        body: |
+          This comment was written by a bot!
+        reactions: rocket
+      
+      
+      
+      
     - name: Show Response
       run: echo '${{steps.issuePost.outputs.response.code}} ${{ toJSON(steps.issuePost.outputs.response) }}'
