--- a/src/package.json
+++ b/src/package.json
@@ -1,16 +1,30 @@
 {
+  "name": "talentforyourevent-app",
+  "description": "The main website of talent for your event",
   "scripts": {
     "dev": "nuxi dev",
     "build": "nuxi build",
     "start": "node .output/server/index.mjs",
-    "lint": "prettier --write ."
+    "lint": "npm run lint:scripts && npm run lint:editor",
+    "lint:scripts": "eslint --fix src --ext .js,.jsx",
+    "lint:editor": "eclint fix"
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.0.11",
     "@unocss/nuxt": "^0.12.2",
     "@vueuse/components": "^7.0.1",
     "@vueuse/core": "^7.0.1",
+    "eclint": "^2.8.1",
+    "eslint": "7.20.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-flowtype": "^5.2.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
     "nuxt3": "latest",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "prisma": "^3.11.1"
+  },
+  "dependencies": {
+    "@prisma/client": "^3.11.1"
   }
 }
