--- a/src/package.json
+++ b/src/package.json
@@ -10,21 +10,24 @@
     "lint:editor": "eclint fix"
   },
   "devDependencies": {
-    "@iconify-json/carbon": "^1.0.11",
-    "@unocss/nuxt": "^0.12.2",
-    "@vueuse/components": "^7.0.1",
-    "@vueuse/core": "^7.0.1",
+    "@iconify-json/carbon": "^1.1.3",
+    "@pinia/nuxt": "^0.1.8",
+    "@vueuse/components": "^8.2.4",
+    "@vueuse/nuxt": "^8.2.3",
     "eclint": "^2.8.1",
-    "eslint": "7.20.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-flowtype": "^5.2.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
+    "eslint": "8.12.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
     "nuxt3": "latest",
-    "prettier": "^2.4.1",
-    "prisma": "^3.11.1"
+    "prettier": "^2.6.2",
+    "prisma": "^3.11.1",
+    "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@prisma/client": "^3.11.1"
+    "@prisma/client": "^3.11.1",
+    "pinia": "^2.0.13",
+    "vue": "^3.2.25"
   }
 }
