--- a/src/package.json
+++ b/src/package.json
@@ -21,6 +21,21 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "nuxt3": "latest",
+    "postcss": "^7.0.35",
+    "postcss-at-rules-variables": "^0.1.10",
+    "postcss-calc": "^7.0.5",
+    "postcss-discard-comments": "^4.0.2",
+    "postcss-each": "^0.10.0",
+    "postcss-fontpath": "^1.0.0",
+    "postcss-functions": "^3.0.0",
+    "postcss-functions-post": "npm:postcss-functions@3.0.0",
+    "postcss-hexrgba": "^2.0.1",
+    "postcss-import": "^12.0.0",
+    "postcss-loader": "^5.0.0",
+    "postcss-mixins": "^6.2.3",
+    "postcss-nested": "^4.2.3",
+    "postcss-replace": "CKGrafico/postcss-replace#patch-1",
+    "postcss-simple-vars": "^5.0.2",
     "prettier": "^2.6.2",
     "prisma": "^3.11.1",
     "typescript": "^4.6.3"
