--- a/src/package.json
+++ b/src/package.json
@@ -24,6 +24,7 @@
     "postcss": "^7.0.35",
     "postcss-at-rules-variables": "^0.1.10",
     "postcss-calc": "^7.0.5",
+    "postcss-color-mod-function": "^3.0.3",
     "postcss-discard-comments": "^4.0.2",
     "postcss-each": "^0.10.0",
     "postcss-fontpath": "^1.0.0",
@@ -43,6 +44,7 @@
   "dependencies": {
     "@nuxtjs/i18n": "npm:@nuxtjs/i18n-edge",
     "@prisma/client": "^3.11.1",
+    "normalize.css": "^8.0.1",
     "pinia": "^2.0.13",
     "vue": "^3.2.25"
   }
