--- a/src/package.json
+++ b/src/package.json
@@ -47,5 +47,8 @@
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.13",
     "vue": "^3.2.25"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
