--- a/src/package.json
+++ b/src/package.json
@@ -46,6 +46,8 @@
     "@prisma/client": "^3.11.1",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.13",
+    "qs": "^6.10.3",
+    "vanilla-tilt-vue": "^0.1.3",
     "vue": "^3.2.25"
   },
   "prisma": {
