--- a/src/package.json
+++ b/src/package.json
@@ -39,6 +39,7 @@
     "postcss-simple-vars": "^5.0.2",
     "prettier": "^2.6.2",
     "prisma": "^3.11.1",
+    "simple-icons": "^6.17.0",
     "typescript": "^4.6.3"
   },
   "dependencies": {
