--- a/src/package.json
+++ b/src/package.json
@@ -48,7 +48,7 @@
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.13",
     "qs": "^6.10.3",
-    "vanilla-tilt-vue": "^0.1.3",
+    "vanilla-tilt": "^1.7.2",
     "vue": "^3.2.25"
   },
   "prisma": {
