--- a/.github/workflows/main_talentforyourevent.yml
+++ b/.github/workflows/main_talentforyourevent.yml
@@ -27,12 +27,15 @@ jobs:
           yarn
           yarn build
           mv .output ./dist
+          
+      - name: Zip artifact for deployment
+        run: zip release.zip ./dist/* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: ./src
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -46,6 +49,11 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: node-app
+          
+      - name: unzip artifact for deployment
+        run: |
+          unzip release.zip
+          rm release.zip
 
       - name: "Deploy to Azure Web App"
         id: deploy-to-webapp
