--- a/.github/workflows/main_talentforyourevent.yml
+++ b/.github/workflows/main_talentforyourevent.yml
@@ -29,13 +29,15 @@ jobs:
           mv .output ./dist
           
       - name: Zip artifact for deployment
-        run: zip release.zip ./dist/* -r
+        run: |
+          cd ./src
+          zip release.zip ./dist/* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: release.zip
+          path: ./src/release.zip
 
   deploy:
     runs-on: ubuntu-latest
