--- a/.github/workflows/main_talentforyourevent.yml
+++ b/.github/workflows/main_talentforyourevent.yml
@@ -55,7 +55,7 @@ jobs:
         run: |
           unzip release.zip
           rm release.zip
-          mv ./dist .
+          mv .output/ .
 
       - name: "Deploy to Azure Web App"
         id: deploy-to-webapp
