Prepare to work offline (as developer)

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,4 +1,11 @@
 # Refer to the README on how to fill these variables
+
+# Github credentials
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
-DATABASE_URL=
+
+# Connection string
+DATABASE_URL="sqlserver://localhost:1433;initialCatalog=talentforyourevent;integratedSecurity=true;trustServerCertificate=true;"
+
+# Fakes login for offline working scenarios
+IS_OFFLINE=true
