--- a/src/.env.example
+++ b/src/.env.example
@@ -5,7 +5,7 @@ GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
 # Connection string
-DATABASE_URL="sqlserver://localhost:1433;initialCatalog=talentforyourevent;integratedSecurity=true;trustServerCertificate=true;"
+DATABASE_URL="sqlserver://localhost;database=talentforyourevent;integratedSecurity=true;trustServerCertificate=true;"
 
 # Fakes login for offline working scenarios
 IS_OFFLINE=true
