--- a/.github/workflows/main_talentforyourevent.yml
+++ b/.github/workflows/main_talentforyourevent.yml
@@ -26,7 +26,7 @@ jobs:
           cd ./src
           yarn
           yarn build
-          
+
       - name: Zip artifact for deployment
         run: |
           cd ./src
@@ -36,7 +36,7 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
-          name: node-app
+          name: app
           path: ./src/release.zip
 
   deploy:
@@ -50,8 +50,8 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
         with:
-          name: node-app
-          
+          name: app
+
       - name: unzip artifact for deployment
         run: |
           unzip release.zip
